<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_home"
        android:title="@string/str_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_search"
        android:title="@string/str_search"
        android:icon="@drawable/ic_search"/>
    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_upload"
        android:title="@string/str_upload"
        android:icon="@drawable/ic_add_post"/>
    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_favourite"
        android:title="@string/str_favourite"
        android:icon="@drawable/ic_like"/>
    <item
        android:menuCategory="secondary"
        android:id="@+id/navigation_profile"
        android:title="@string/str_profile"
        android:icon="@drawable/account_circle"/>
</menu>