<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="0dp"
        android:gravity="center"
        app:buttonGravity="center_vertical"
        app:titleTextColor="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_fullname1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_profile"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_arrow_down"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_logout"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp">
                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_person"
                        app:shapeAppearanceOverlay="@style/circle"
                        app:strokeColor="@color/white"
                        app:strokeWidth="2dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right|bottom">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_twotone_add_circle"/>
                    </LinearLayout>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_posts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="normal"
                            android:text="@string/str_posts"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_followers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="normal"
                            android:text="@string/str_followers"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tv_following"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textSize="18sp"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textStyle="normal"
                            android:text="@string/str_following"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Student at PDP Academy ┃ Android Developer"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="normal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="My email address:"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:textStyle="normal"/>
                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="#3797EF"
                    android:layout_marginTop="5dp"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="Edit Profile"
                android:textAllCaps="false"
                android:layout_marginEnd="5dp"
                android:background="@drawable/textview_rounded_corners"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_person_add"
                android:background="@drawable/textview_rounded_corners"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:shapeAppearanceOverlay="@style/circle"
                    android:src="@drawable/img"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    app:strokeColor="#C7C7CC"
                    app:strokeWidth="1dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New"
                    android:gravity="center_horizontal"
                    android:textColor="#262626"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:shapeAppearanceOverlay="@style/circle"
                    android:src="@drawable/education"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    app:strokeColor="#C7C7CC"
                    app:strokeWidth="1dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Education"
                    android:gravity="center_horizontal"
                    android:textColor="#262626"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:shapeAppearanceOverlay="@style/circle"
                    android:src="@drawable/morning"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    app:strokeColor="#C7C7CC"
                    app:strokeWidth="1dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Morning"
                    android:gravity="center_horizontal"
                    android:textColor="#262626"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:shapeAppearanceOverlay="@style/circle"
                    android:src="@drawable/sport"
                    android:background="@color/white"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    app:strokeColor="#C7C7CC"
                    app:strokeWidth="1dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sport"
                    android:gravity="center_horizontal"
                    android:textColor="#262626"/>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_grid_icon"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#262626"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_tags_icon"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>